[gd_scene load_steps=3 format=3 uid="uid://t51fppanojrx"]

[ext_resource type="Script" path="res://Scenes/PuzzleArea/PuzzleArea.gd" id="1_rgyuh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_051dm"]
resource_local_to_scene = true
size = Vector2(48, 48)

[node name="PuzzleArea" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_rgyuh")

[node name="InteractionArea" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_051dm")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
